--- a/assets/less/utils/_vars.less
+++ b/assets/less/utils/_vars.less
@@ -1,5 +1,7 @@
 // font colors
 @defFontYellow: #FFD231;
+@defFontGreen: #7BFF12;
+@defFontBlue: #12D9FF;
 
 // background colors
 @defBlackTrans: rgba(0, 0, 0, 0.2);
