--- a/assets/less/utils/_vars.less
+++ b/assets/less/utils/_vars.less
@@ -1,3 +1,6 @@
+// min adaptive width
+@minWindowWidth: 1280px;
+
 // font colors
 @defFontYellow: #FFD231;
 @defFontGreen: #7BFF12;
@@ -12,4 +15,3 @@
 @defGreyBorder: #2D2D31;
 @defPurpleBorder: #5E2AA3;
 @defYellowBorder: #FFD231;
-
