Case opening page with components (no logic)

--- a/assets/less/utils/_vars.less
+++ b/assets/less/utils/_vars.less
@@ -8,10 +8,11 @@
 
 // background colors
 @defBlackTrans: rgba(0, 0, 0, 0.2);
-@defPurpleBg: #6D1CD4;
+@defPurpleBg: #6D1CD4; // rgba(109, 28, 212, ...)
 @defPurpleBgHover: #7333C6;
+@defGreyBgHover: #36363B;
 
 // borders
 @defGreyBorder: #2D2D31;
-@defPurpleBorder: #5E2AA3;
+@defPurpleBorder: #52159F;
 @defYellowBorder: #FFD231;
