--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -25,6 +25,12 @@ body {
   background-size: auto 138%;
   padding-bottom: 3px;
   margin-top: 30px;
+  .case-item-img-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+  }
   &__img {
     display: block;
     width: 180px;
@@ -49,3 +55,8 @@ body {
     top: -2px;
   }
 }
+.case-item.blue { background-position:-10px 45% }
+.case-item.green { background-position: -230px 45% }
+.case-item.purple { background-position: -455px 45% }
+.case-item.red { background-position: -675px 45% }
+.case-item.yellow { background-position: -900px 45% }
