--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -34,7 +34,10 @@ body {
   &__img {
     display: block;
     width: 180px;
-    margin-bottom: 10px;
+    height: 75px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
   }
   &__type {
     font-family: Roboto Condensed;
